k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api-service
  labels:
    app: sample-api-service
spec:
  selector:
    matchLabels:
      app: sample-api-service
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: sample-api-service
    spec:
      containers:
      - name: sample-api-service
        image: local/sample-api-service:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
#            env:
#              - name: SPRING_PROFILES_ACTIVE
#                value: dev
        livenessProbe:
          httpGet:
            path: /alive
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /alive
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 3
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.25"
          limits:
            memory: "1Gi"
            cpu: "0.5"
